--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -8,15 +8,19 @@
 {
     <div class="row" data-task-id="@task.TaskId" data-list-id="@task.ListId">
         <div class="col-1 border align-content-center text-center">
-            <input class="auto-save" type="checkbox" checked="@task.IsComplete" id="IsComplete-@{@task.TaskId}"/>
+            <input class="auto-save" type="checkbox" checked="@task.IsComplete" id="IsComplete-@{@task.TaskId}" />
         </div>
-        <div class="col-11 border">
+        <div class="col-10 border">
             <input class="auto-save" value="@task.Detail" id="Detail-@{@task.TaskId}" />
+        </div>
+        <div class="col-1">
+            <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="DeleteTask" 
+                asp-route-taskId="@task.TaskId" asp-route-listId="@Model.ListId">X</a>
         </div>
     </div>
 }
 
-<a asp-controller="Home" asp-action="AddTask" asp-route-listId="@Model.ListId">+ Add Row</a>
+<a class="btn btn-primary mt-2" asp-controller="Home" asp-action="AddTask" asp-route-listId="@Model.ListId">+ Add Row</a>
 
 @section Scripts {
     <script src="~/js/todoList.js"></script>
