disabled Add button after click

--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
     </div>
 }
 
-<a class="btn btn-primary mt-2" asp-controller="Home" asp-action="AddTask" asp-route-listId="@Model.ListId">+ Add Row</a>
+<a class="btn btn-primary mt-2" id="add-task" asp-controller="Home" asp-action="AddTask" asp-route-listId="@Model.ListId">+ Add Row</a>
 
 @section Scripts {
     <script src="~/js/todoList.js"></script>
