styling for todo list

--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -2,25 +2,25 @@
 
 <input type="hidden" id="listId" value="@Model.ListId" />
 
-<input class="h2" id="listName" value="@Model.Name" />
+<input class="h2 modal-title mb-2 border-top-0 border-start-0 border-end-0" id="listName" value="@Model.Name" />
 
 @foreach (var task in Model.Tasks)
 {
-    <div class="row" data-task-id="@task.TaskId" data-list-id="@task.ListId">
-        <div class="col-1 border align-content-center text-center">
-            <input class="auto-save" type="checkbox" checked="@task.IsComplete" id="IsComplete-@{@task.TaskId}" />
+    <div class="row m-2" data-task-id="@task.TaskId" data-list-id="@task.ListId">
+        <div class="col-1 align-content-center text-center">
+            <input class="auto-save form-check" type="checkbox" checked="@task.IsComplete" id="IsComplete-@{@task.TaskId}" />
         </div>
-        <div class="col-10 border">
-            <input class="auto-save" value="@task.Detail" id="Detail-@{@task.TaskId}" />
+        <div class="col-10">
+            <input class="auto-save form-control" value="@task.Detail" id="Detail-@{@task.TaskId}" />
         </div>
         <div class="col-1">
-            <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="DeleteTask" 
+            <a class="btn btn-outline-danger" asp-controller="Home" asp-action="DeleteTask" 
                 asp-route-taskId="@task.TaskId" asp-route-listId="@Model.ListId">X</a>
         </div>
     </div>
 }
 
-<a class="btn btn-primary mt-2" id="add-task" asp-controller="Home" asp-action="AddTask" asp-route-listId="@Model.ListId">+ Add Row</a>
+<a class="btn btn-primary mt-2" id="add-task" asp-controller="Home" asp-action="AddTask" asp-route-listId="@Model.ListId">+ Add Task</a>
 
 @section Scripts {
     <script src="~/js/todoList.js"></script>
