--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TodoListModel
 
-<input type="hidden" id="listId" value="@Model.ListId" />
+<input type="hidden" id="selected-list-id" value="@Model.ListId" />
 
 <input class="h2 modal-title mb-2 border-top-0 border-start-0 border-end-0" id="listName" value="@Model.Name" />
 
@@ -8,10 +8,10 @@
 {
     <div class="row m-2" data-task-id="@task.TaskId" data-list-id="@task.ListId">
         <div class="col-1 align-content-center text-center">
-            <input class="auto-save form-check" type="checkbox" checked="@task.IsComplete" id="IsComplete-@{@task.TaskId}" />
+            <input class="auto-save form-check" type="checkbox" checked="@task.IsComplete" id="IsComplete-@task.TaskId" />
         </div>
         <div class="col-10">
-            <input class="auto-save form-control" value="@task.Detail" id="Detail-@{@task.TaskId}" />
+            <input class="auto-save form-control" value="@task.Detail" id="Detail-@task.TaskId" />
         </div>
         <div class="col-1">
             <a class="btn btn-outline-danger" asp-controller="Home" asp-action="DeleteTask" 
