--- a/ToDoList/Views/Shared/_TodoListPanel.cshtml
+++ b/ToDoList/Views/Shared/_TodoListPanel.cshtml
@@ -1,4 +1,4 @@
-﻿<a class="btn btn-outline-primary btn-lg m-2">+ New List</a>
+﻿<a class="btn btn-outline-primary btn-lg m-2" asp-action="AddList" asp-controller="Panel">+ New List</a>
 <hr class="m-1" />
 
 <div class="panel-items"></div>
